One width a table, and a reader built for it (#48)
A table gave one width a column, 1, 2 or 4 bytes each. It gives one width
for the whole table now (R6.3), and the 68000 reader is built for that
width.

THE FORMAT. The header is 16 bytes under every variant and every C: DTX,
the variant, R, C, RR, the width at 14 and one zero byte. A row is C times
W and a column is R times W, so DTX1's columns are all the same length and
lie at one stride, and DTX2's rule that R divides by k weakens to R times
W divides by k.

THE READER. One width takes the three width classes out of it: one cursor,
one count, one stride. A read is a loop of C turns, a value and a stride,
so the images have no per-column entry and DTX0 and DTX1 have no column
table at all; DTX2's is one stream record a column, four longs. Nothing
tests an address any more, since at a width of 2 or 4 both sides of a move
stand on that width's boundary. The state block is 28 bytes under DTX0 and
DTX1 at every C, and the displacement rule that bounded C to 35 at a ring
of 960 is gone: a table of 256 columns packages.

What that measures, in 68000 cycles on 64 rows of three columns: a DTX1
read 188 where it was 536, its code 316 bytes where it was 716, and a DTX2
image's code 1080 where it was 1476.

THE IMAGES ARE 22. DTX0 reads a row as one run of bytes, so one file is
every DTX0 table's; DTX1 has one a width; DTX2 one a width a unit with the
copy code and without.

The Go and C# trees carry the same format, reader and tools, compared with
the Java tree byte for byte through ParityTest. The conformance kit is
nineteen tables covering every variant at every width, and every unit above
and below the width.

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>